# RP2040_AWS_APP_NEW

./: .gitmodules  CMakeLists.txt  README.md  rp2040_hat_aws_c-patch.cmake
examples/: CMakeLists.txt  example.tar
examples/aws_iot_mqtt/: CMakeLists.txt  aws_iot_mqtt.c  mqtt_certificate.h
examples/pico_arhis_aws/: CMakeLists.txt  fleet_provisioning_serializer.c  mqtt_operations.c  pico_arhis_aws.c  pkcs11_operations.c
libraries/: CMakeLists.txt
pico_test001_cert/: W59500use1002212269b6d7b06l48l_device_certification.pem.cert  W59500use1002212269b6d7b06l48l_privateKey.pem.key  W59500use1002212269b6d7b06l48l_publicKey.pem.key  certgen  certgen.c  client_cert.c  privateKey.c  root_ca1.c
port/: CMakeLists.txt
port/aws-iot-device-sdk-embedded-C/: sdk.tar
port/aws-iot-device-sdk-embedded-C/inc/: ssl_transport_interface.h
port/aws-iot-device-sdk-embedded-C/src/: mqtt_transport_interface.c  ssl_transport_interface.c
